<resources>
    <string name="app_name">Market app</string>
    <string name="editprofile">editprofile</string>
    <string name="username">username</string>
    <string name="save">save</string>
    <string name="phone">phone</string>
    <string name="addres">addres</string>
    <string name="email">email</string>
    <string name="send">send</string>
    <string name="add_to_cart">add to Cart</string>
    <string name="remove">REMOVE</string>
    <string name="clothes">clothes</string>
    <string name="electronics">electronics</string>
    <string name="headphones">headphones</string>
    <string name="hours">hours</string>
    <string name="shoes">shoes</string>
    <string name="languages">languages</string>
    <string name="thames">thames</string>
    <string name="log_out">Log out</string>
    <string name="product_name">Product name :</string>
    <string name="product_price">Product Price :</string>
    <string name="arabic">arabic</string>
    <string name="password">password</string>
    <string name="forgot_password">forgot password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="you_are_new_create_new">you are new create new</string>
    <string name="english">english</string>
    <string name="name">name</string>
    <string name="confirmpassword">confirmPassword</string>
    <string name="registration">registration</string>
    <string name="home">Home</string>
    <string name="favorite">favorite</string>
    <string name="setting">Setting</string>
    <string name="refresh">\" please refresh activity.\"</string>
    <string name="Failed">\"Failed. \"</string>
    <string name="ProductSave">Product Save to order</string>
    <string name="NodatafoundinDatabas">No data found in Database</string>
    <string name="producthasbeendeleted">product has been deleted from Database.</string>
    <string name="Egy">\"Egy : \"</string>
    <string name="hi">hi</string>
    <string name="changePasswordFromEmail">Good job! , change Password From Email</string>
    <string name="wrong">Something went wrong! , please again</string>
    <string name="Info">Info</string>
    <string name="Internetnotavailable">Internet not available,  check your internet connectivity and try again</string>
    <string name="pleaseEnterEmail">pleaseEnterEmail</string>
    <string name="pleaseEnterPassword">pleaseEnterPassword</string>
    <string name="PasswordMustBe">PasswordMustBe 8 Digit</string>
    <string name="Loading">Loading</string>
    <string name="Exit">Exit app!</string>
    <string name="Areyousure">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="Favorite">Product Save to Favorite</string>
    <string name="Password">Password does not match</string>
    <string name="Name">please Enter Name</string>
    <string name="Phone">please Enter Phone</string>
    <string name="phonedigit">please Enter 11 Digit</string>
    <string name="Address">please Enter Address</string>
</resources>