<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/SwipeRefreshLayout_Home"
    tools:context=".fragment.HomeFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvcat"
                android:visibility="gone"/>
            <Button
                android:id="@+id/category_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_margin="03dp"/>
            <Button
                android:id="@+id/category_clothes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clothes"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_margin="02dp"/>
            <Button
                android:id="@+id/category_electronics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electronics"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_margin="02dp"/>
            <Button
                android:id="@+id/category_headphones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/headphones"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_margin="02dp"/>
            <Button
                android:id="@+id/category_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_margin="02dp"/>
            <Button
                android:id="@+id/category_shoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoes"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_margin="02dp"/>

    </LinearLayout>
</HorizontalScrollView>

<androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcy1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    </LinearLayout>
    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>