<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".authentication.LoginActivity">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/loginphoto"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                app:counterMaxLength="50"
                app:counterEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUserNameLogin"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="25"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="75dp"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                app:counterMaxLength="50"
                app:counterEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="15"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvForgetPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:gravity="start"
                android:paddingTop="5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/red"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/corner1"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/or"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <TextView
                android:id="@+id/tvRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/you_are_new_create_new"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            tools:ignore="ExtraText">
            <TextView
                android:id="@+id/arabicLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:text="@string/arabic"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/englishLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:text="@string/english"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
</RelativeLayout>