<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/SwipeRefreshLayout"
    tools:context=".ui.EditSetting">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:indeterminate="true"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editprofile"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"/>
        </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>
        <ImageView
            android:id="@+id/changeProfielSetting1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-25dp"
            android:padding="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/userNameEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_user"
                android:layout_marginLeft="09dp"
                android:layout_marginRight="09dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@drawable/corner"
                android:hint="@string/username"
                tools:ignore="RtlSymmetry"
                android:inputType="text"  />
            <TextView
                android:id="@+id/saveUserNameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:text="@string/save"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="@color/blue" />
        </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <EditText
        android:id="@+id/userPhoneEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_marginEnd="09dp"
        android:layout_marginStart="09dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/corner"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:drawablePadding="10dp"
        android:textColor="@color/black"
        android:inputType="phone"
        android:drawableStart="@drawable/ic_phone"
        android:hint="@string/phone"/>
    <TextView
        android:id="@+id/saveUserPhoneEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/blue"
        />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/userAddressEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:hint="@string/addres"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:drawableStart="@drawable/ic_address"
                android:layout_marginLeft="09dp"
                android:layout_marginRight="09dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/corner"
                android:inputType="textMultiLine"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:id="@+id/saveUserAddressEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="@color/blue"
                />
        </LinearLayout>
         </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>